[workspace.package]
version = "1.0.0"
authors = ["gecko <577738@qq.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[workspace]
resolver = "2"
members = [
    # Binaries
    "src/bin",
    # Common
    "src/libs/rust-wallet",
]

[workspace.dependencies]
bitcoin-wallet  = { path = "src/libs/rust-wallet" }
bitcoin = "0.26"
# bip39 = { version = "1.0.1"}
